first try to portback tsn-api

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,11 @@
   ],
   "rules": {
     "comma-dangle": ["error", "always-multiline"],
+    "indent": ["error", 2, {
+      "CallExpression": {"arguments": 0},
+      "MemberExpression": 0,
+      "SwitchCase": 1
+    }],
     "no-else-return": "error"
   }
 }
