--- a/package.json
+++ b/package.json
@@ -9,65 +9,67 @@
     "url": "https://github.com/EastCoastProduct/api-skeleton"
   },
   "dependencies": {
-    "babel-cli": "^6.24.0",
-    "babel-plugin-module-resolver": "^2.7.0",
+    "babel-cli": "^6.24.1",
+    "babel-plugin-module-resolver": "^2.7.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-preset-env": "^1.3.2",
-    "babel-register": "^6.24.0",
+    "babel-preset-env": "^1.5.2",
+    "babel-register": "^6.24.1",
     "bcrypt": "^1.0.2",
     "bluebird": "^3.5.0",
-    "dotenv-safe": "^4.0.3",
-    "es6-error": "^4.0.2",
-    "joi": "^10.4.1",
-    "jsonwebtoken": "^7.3.0",
+    "crypto-random-string": "^1.0.0",
+    "dotenv-safe": "^4.0.4",
+    "joi": "^10.6.0",
+    "jsonwebtoken": "^7.4.1",
     "kcors": "^2.2.1",
-    "koa": "^2.2.0",
-    "koa-basic-auth": "^2.0.0",
+    "koa": "^2.3.0",
     "koa-bodyparser": "^4.2.0",
+    "koa-compose": "^4.0.0",
     "koa-conditional-get": "^2.0.0",
-    "koa-convert": "^1.2.0",
     "koa-etag": "^3.0.0",
-    "koa-helmet": "^3.1.0",
-    "koa-jwt": "^3.2.1",
+    "koa-helmet": "^3.2.0",
+    "koa-jwt": "^3.2.2",
     "koa-mount": "^3.0.0",
     "koa-response-time": "^2.0.0",
-    "koa-router": "^7.1.1",
-    "koa-static": "^3.0.0",
+    "koa-router": "^7.2.1",
     "lodash": "^4.17.4",
     "migratio": "^2.0.1",
-    "ncp": "^2.0.0",
+    "minimist": "^1.2.0",
+    "nested-error-stacks": "^2.0.0",
     "npm-run-all": "^4.0.2",
-    "pg-promise": "^5.6.4",
-    "rimraf": "^2.6.1",
-    "toml-require": "^1.1.0",
-    "snyk": "^1.36.2"
+    "pg-promise": "^6.3.5",
+    "random-int": "^1.0.0",
+    "slugify": "^1.1.0",
+    "snyk": "^1.36.2",
+    "toml-require": "^1.1.0"
   },
   "devDependencies": {
-    "eslint": "^3.19.0",
-    "eslint-config-standard": "^10.2.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-node": "^4.2.2",
+    "eslint": "^4.2.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.6.1",
+    "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
-    "faker": "^4.1.0",
     "nodemon": "^1.11.0",
     "supertest": "^3.0.0",
     "tap-spec": "^4.1.1",
-    "tape": "^4.6.3"
+    "tape": "^4.7.0"
   },
   "engines": {
-    "node": "7",
-    "npm": "4"
+    "node": "8",
+    "npm": "5"
   },
   "scripts": {
     "lint:check": "eslint .",
     "lint:fix": "eslint --fix .",
-    "migrate": "node -r babel-register -r ./env node_modules/migratio/cli",
+    "migrate": "node -r babel-register -r ./env migrate",
     "dev": "run-p -s dev:server",
     "dev:server": "nodemon -q -I -e js,json -i package.json -- -r babel-register index.js",
     "test": "tape -r babel-register -r ./env **/*.test.js | tap-spec",
+    "db:recreate": "run-s -s 'migrate recreate'",
+    "db:seed": "run-s -s 'migrate seed'",
+    "ci": "run-s -s lint:check db:recreate db:seed test",
     "snyk-protect": "snyk protect",
-    "prepublish": "npm run snyk-protect"
+    "prepare": "npm run snyk-protect"
   },
   "snyk": true
 }
