--- a/package.json
+++ b/package.json
@@ -52,8 +52,7 @@
     "nodemon": "^1.11.0",
     "supertest": "^3.0.0",
     "tap-spec": "^4.1.1",
-    "tape": "^4.7.0",
-    "faker": "^4.1.0"
+    "tape": "^4.7.0"
   },
   "engines": {
     "node": "8",
