--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-NODE_ENV=development
-LOG=2
-PORT=5000
-DATABASE_URL=postgres://api:api@127.0.0.1:5432/api
-BCRYPT_ROUNDS=8
-JWT_SECRET=asdasdasd
-PASSWORD_TOKEN_DURATION=1
+NODE_ENV=
+LOG=
+PORT=
+DATABASE_URL=
+BCRYPT_ROUNDS=
+JWT_SECRET=
+PASSWORD_TOKEN_DURATION=
