Make work with web-skeleton-v2. (#6)
* Make work with web-skeleton-v2.

* Fix typo.

* Don't use relative path to require const.

* Don't use transactions for password check.

* Move mail configuraion in .env.

* Don't return user on authentication.

* Don't return token on /recoverPassword.

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,15 @@
 NODE_ENV=
 LOG=
 PORT=
+WEB_URL=
 DATABASE_URL=
 BCRYPT_ROUNDS=
 JWT_SECRET=
 PASSWORD_TOKEN_DURATION=
+GOOGLE_API_KEY=
+MAIL_FROM_NAME=
+MAIL_FROM_ADDRESS=
+MAIL_HOST=
+MAIL_PORT=
+MAIL_USER=
+MAIL_PASS=
