--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "migratio": "^2.0.1",
     "minimist": "^1.2.0",
     "nested-error-stacks": "^2.0.0",
+    "nodemailer": "^4.1.0",
     "npm-run-all": "^4.0.2",
     "pg-promise": "^6.3.5",
     "random-int": "^1.0.0",
