--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "random-int": "^1.0.0",
     "slugify": "^1.1.0",
     "snyk": "^1.36.2",
-    "toml-require": "^1.1.0"
+    "toml-require": "^1.1.0",
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
     "eslint": "^4.2.0",
