Enable passwordless auth (#1)
* enable passwordless auth

* integrate with signup

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ DATABASE_URL=
 BCRYPT_ROUNDS=
 JWT_SECRET=
 PASSWORD_TOKEN_DURATION=
+PASSWORDLESS_LOGIN_PAGE=
 GOOGLE_API_KEY=
 MAIL_FROM_NAME=
 MAIL_FROM_ADDRESS=
