--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "api",
   "version": "2.0.0",
   "private": true,
-  "author": "ECP",
+  "author": "Blazing Edge",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/EastCoastProduct/api-skeleton-v2"
+    "url": "https://github.com/blazing-edge-labs/api-skeleton-v2"
   },
   "dependencies": {
     "babel-cli": "^6.24.1",
