use connection strings for mailing

--- a/.env.example
+++ b/.env.example
@@ -7,10 +7,6 @@ BCRYPT_ROUNDS=
 JWT_SECRET=
 PASSWORD_TOKEN_DURATION=
 PASSWORDLESS_LOGIN_PAGE=
-GOOGLE_API_KEY=
 MAIL_FROM_NAME=
 MAIL_FROM_ADDRESS=
-MAIL_HOST=
-MAIL_PORT=
-MAIL_USER=
-MAIL_PASS=
+MAIL_URL=
