--- a/package.json
+++ b/package.json
@@ -9,50 +9,48 @@
     "url": "https://github.com/blazing-edge-labs/api-skeleton-v2"
   },
   "dependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-plugin-module-resolver": "^2.7.1",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-preset-env": "^1.5.2",
-    "babel-register": "^6.24.1",
-    "bcrypt": "^1.0.2",
-    "bluebird": "^3.5.0",
+    "babel-plugin-module-resolver": "^3.0.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-register": "^6.26.0",
+    "bcrypt": "^1.0.3",
+    "bluebird": "^3.5.1",
     "connection-string": "^0.4.1",
     "crypto-random-string": "^1.0.0",
     "dotenv-safe": "^4.0.4",
     "is-promise": "^2.1.0",
-    "joi": "^10.6.0",
-    "jsonwebtoken": "^7.4.1",
+    "joi": "^13.1.0",
+    "jsonwebtoken": "^8.1.0",
     "kcors": "^2.2.1",
-    "koa": "^2.3.0",
+    "koa": "^2.4.1",
     "koa-bodyparser": "^4.2.0",
     "koa-compose": "^4.0.0",
     "koa-conditional-get": "^2.0.0",
     "koa-etag": "^3.0.0",
-    "koa-helmet": "^3.2.0",
-    "koa-jwt": "^3.2.2",
+    "koa-helmet": "^3.3.0",
+    "koa-jwt": "^3.3.0",
     "koa-mount": "^3.0.0",
     "koa-response-time": "^2.0.0",
-    "koa-router": "^7.2.1",
+    "koa-router": "^7.3.0",
     "lodash": "^4.17.4",
-    "migratio": "^2.0.1",
+    "migratio": "^2.0.3",
     "minimist": "^1.2.0",
     "nested-error-stacks": "^2.0.0",
-    "nodemailer": "^4.1.0",
-    "npm-run-all": "^4.0.2",
-    "pg-promise": "^6.3.5",
+    "nodemailer": "^4.4.1",
+    "npm-run-all": "^4.1.2",
+    "pg-promise": "^7.3.3",
     "random-int": "^1.0.0",
-    "slugify": "^1.1.0",
-    "snyk": "^1.36.2",
+    "slugify": "^1.2.9",
     "toml-require": "^1.1.0"
   },
   "devDependencies": {
-    "eslint": "^4.2.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-import": "^2.6.1",
-    "eslint-plugin-node": "^5.1.1",
-    "eslint-plugin-promise": "^3.5.0",
+    "eslint": "^4.15.0",
+    "eslint-config-standard": "^11.0.0-beta.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
-    "nodemon": "^1.11.0",
+    "nodemon": "^1.14.11",
     "supertest": "^3.0.0",
     "tap-spec": "^4.1.1",
     "tape": "^4.7.0"
