--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-register": "^6.26.0",
-    "bcrypt": "^1.0.3",
+    "bcrypt": "^3.0.0",
     "bluebird": "^3.5.1",
     "connection-string": "^0.4.1",
     "crypto-random-string": "^1.0.0",
@@ -57,7 +57,7 @@
   },
   "engines": {
     "node": "8",
-    "npm": "5"
+    "yarn": "1"
   },
   "scripts": {
     "lint:check": "eslint .",
