--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/blazing-edge-labs/api-skeleton-v2"
+    "url": "https://github.com/blazing-edge-labs/api-skeleton"
   },
   "dependencies": {
     "babel-plugin-module-resolver": "^3.0.0",
@@ -60,14 +60,15 @@
     "yarn": "1"
   },
   "scripts": {
+    "ci": "run-s -s lint:check db:recreate db:seed test",
+    "db:recreate": "run-s -s \"migrate recreate\"",
+    "db:seed": "run-s -s \"migrate seed\"",
+    "dev": "run-p -s dev:server",
+    "dev:server": "nodemon -q -I -e js,json -i package.json -- -r babel-register index.js",
     "lint:check": "eslint .",
     "lint:fix": "eslint --fix .",
     "migrate": "node -r babel-register -r ./env migrate",
-    "dev": "run-p -s dev:server",
-    "dev:server": "nodemon -q -I -e js,json -i package.json -- -r babel-register index.js",
-    "test": "tape -r babel-register -r ./env **/*.test.js | tap-spec",
-    "db:recreate": "run-s -s \"migrate recreate\"",
-    "db:seed": "run-s -s \"migrate seed\"",
-    "ci": "run-s -s lint:check db:recreate db:seed test"
+    "start": "node -r babel-register index.js",
+    "test": "tape -r babel-register -r ./env **/*.test.js | tap-spec"
   }
 }
