--- a/package.json
+++ b/package.json
@@ -13,45 +13,45 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-register": "^6.26.0",
-    "bcrypt": "^3.0.0",
-    "bluebird": "^3.5.1",
-    "connection-string": "^0.4.1",
+    "bcryptjs": "^2.4.3",
+    "bluebird": "^3.5.2",
+    "connection-string": "^1.0.1",
     "crypto-random-string": "^1.0.0",
     "dotenv-safe": "^6.0.0",
     "is-promise": "^2.1.0",
-    "joi": "^13.1.0",
+    "joi": "^13.6.0",
     "jsonwebtoken": "^8.1.0",
-    "kcors": "^2.2.1",
-    "koa": "^2.4.1",
+    "kcors": "^2.2.2",
+    "koa": "^2.5.3",
     "koa-bodyparser": "^4.2.0",
     "koa-compose": "^4.0.0",
     "koa-conditional-get": "^2.0.0",
     "koa-etag": "^3.0.0",
     "koa-helmet": "^4.0.0",
-    "koa-jwt": "^3.3.0",
-    "koa-mount": "^3.0.0",
+    "koa-jwt": "^3.5.1",
+    "koa-mount": "^4.0.0",
     "koa-response-time": "^2.0.0",
     "koa-router": "^7.3.0",
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.11",
     "migratio": "^2.0.3",
     "minimist": "^1.2.0",
-    "nested-error-stacks": "^2.0.0",
-    "nodemailer": "^4.4.1",
+    "nested-error-stacks": "^2.1.0",
+    "nodemailer": "^4.6.8",
     "npm-run-all": "^4.1.2",
-    "pg-promise": "^7.3.3",
+    "pg-promise": "^8.4.6",
     "random-int": "^1.0.0",
-    "slugify": "^1.2.9",
+    "slugify": "^1.3.1",
     "toml-require": "^1.1.0"
   },
   "devDependencies": {
-    "eslint": "^4.15.0",
-    "eslint-config-standard": "^11.0.0-beta.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-node": "^5.2.1",
-    "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "nodemon": "^1.14.11",
-    "supertest": "^3.0.0",
+    "eslint": "^5.6.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "nodemon": "^1.18.4",
+    "supertest": "^3.3.0",
     "tap-spec": "^5.0.0",
     "tape": "^4.7.0"
   },
