--- a/.eslintrc
+++ b/.eslintrc
@@ -1,16 +1,16 @@
 {
   "extends": [
     "standard",
-    "plugin:promise/recommended"
+    "plugin:promise/recommended",
   ],
   "rules": {
     "comma-dangle": ["error", "always-multiline"],
     "indent": ["error", 2, {
-      "CallExpression": {"arguments": "off"},
+      "CallExpression": {"arguments": 0},
       "MemberExpression": 0,
-      "SwitchCase": 1
+      "SwitchCase": 1,
     }],
     "no-else-return": "error",
-    "promise/valid-params": 0
-  }
+    "promise/valid-params": "off",
+  },
 }
