--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,13 @@
 {
   "presets": [
-    ["env", {
+    ["@babel/preset-env", {
       "targets": {
-        "node": 8
+        "node": 10
       }
     }]
   ],
   "plugins": [
-    "transform-object-rest-spread",
+    "@babel/plugin-syntax-object-rest-spread",
     ["module-resolver", {
       "root": ["."]
     }]
