--- a/package.json
+++ b/package.json
@@ -9,53 +9,53 @@
     "url": "https://github.com/blazing-edge-labs/api-skeleton"
   },
   "dependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/register": "^7.5.5",
     "babel-plugin-module-resolver": "^3.0.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-register": "^6.26.0",
     "bcryptjs": "^2.4.3",
     "connection-string": "^1.0.1",
-    "crypto-random-string": "^1.0.0",
+    "crypto-random-string": "^3.0.1",
     "dotenv-safe": "^6.1.0",
     "is-promise": "^2.1.0",
-    "joi": "^14.0.0",
-    "jsonwebtoken": "^8.1.0",
+    "joi": "^14.3.1",
+    "jsonwebtoken": "^8.5.1",
     "kcors": "^2.2.2",
-    "koa": "^2.5.3",
+    "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.0",
     "koa-compose": "^4.0.0",
     "koa-conditional-get": "^2.0.0",
     "koa-etag": "^3.0.0",
-    "koa-helmet": "^4.0.0",
-    "koa-jwt": "^3.5.1",
+    "koa-helmet": "^4.2.0",
+    "koa-jwt": "^3.6.0",
     "koa-mount": "^4.0.0",
-    "koa-response-time": "^2.0.0",
+    "koa-response-time": "^2.1.0",
     "koa-router": "^7.3.0",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.15",
     "migratio": "^2.0.3",
     "minimist": "^1.2.0",
     "nested-error-stacks": "^2.1.0",
-    "nodemailer": "^4.6.8",
-    "npm-run-all": "^4.1.2",
-    "pg-promise": "^8.5.0",
-    "random-int": "^1.0.0",
-    "slugify": "^1.3.1",
-    "toml-require": "^1.1.0"
+    "nodemailer": "^6.3.0",
+    "npm-run-all": "^4.1.5",
+    "pg-promise": "^9.0.0",
+    "random-int": "^2.0.0",
+    "slugify": "^1.3.4",
+    "toml-require": "^1.2.0"
   },
   "devDependencies": {
-    "eslint": "^5.7.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^7.0.1",
-    "eslint-plugin-promise": "^4.0.1",
+    "eslint": "^6.1.0",
+    "eslint-config-standard": "^13.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
-    "nodemon": "^1.18.4",
-    "supertest": "^3.3.0",
+    "nodemon": "^1.19.1",
+    "supertest": "^4.0.2",
     "tap-spec": "^5.0.0",
-    "tape": "^4.7.0"
+    "tape": "^4.11.0"
   },
   "engines": {
-    "node": "8",
+    "node": "10",
     "yarn": "1"
   },
   "scripts": {
@@ -63,11 +63,11 @@
     "db:recreate": "run-s -s \"migrate recreate\"",
     "db:seed": "run-s -s \"migrate seed\"",
     "dev": "run-p -s dev:server",
-    "dev:server": "nodemon -q -I -e js,json -i package.json -- -r babel-register index.js",
+    "dev:server": "nodemon -q -I -e js,json -i package.json -- -r @babel/register index.js",
     "lint:check": "eslint .",
     "lint:fix": "eslint --fix .",
-    "migrate": "node -r babel-register -r ./env migrate",
-    "start": "node -r babel-register index.js",
-    "test": "tape -r babel-register -r ./env **/*.test.js | tap-spec"
+    "migrate": "node -r @babel/register -r ./env migrate",
+    "start": "node -r @babel/register index.js",
+    "test": "tape -r @babel/register -r ./env **/*.test.js | tap-spec"
   }
 }
