--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "api",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "private": true,
   "author": "Blazing Edge",
   "license": "MIT",
@@ -9,65 +9,57 @@
     "url": "https://github.com/blazing-edge-labs/api-skeleton"
   },
   "dependencies": {
-    "@babel/core": "^7.7.4",
-    "@babel/preset-env": "^7.7.4",
-    "@babel/register": "^7.7.4",
-    "babel-plugin-module-resolver": "^3.2.0",
+    "@hapi/joi": "^17.1.0",
     "bcryptjs": "^2.4.3",
-    "connection-string": "^1.0.1",
-    "crypto-random-string": "^3.0.1",
+    "connection-string": "^3.1.1",
+    "crypto-random-string": "^3.1.0",
     "dotenv-safe": "^8.2.0",
     "is-promise": "^2.1.0",
-    "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
     "kcors": "^2.2.2",
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.2.0",
-    "koa-compose": "^4.0.0",
     "koa-conditional-get": "^2.0.0",
     "koa-etag": "^3.0.0",
     "koa-helmet": "^5.2.0",
     "koa-jwt": "^3.6.0",
     "koa-mount": "^4.0.0",
     "koa-response-time": "^2.1.0",
-    "koa-router": "^7.3.0",
+    "koa-router": "^8.0.7",
     "lodash": "^4.17.15",
     "migratio": "^2.0.3",
-    "minimist": "^1.2.0",
+    "mri": "^1.1.4",
     "nested-error-stacks": "^2.1.0",
-    "nodemailer": "^6.4.0",
+    "nodemailer": "^6.4.2",
     "npm-run-all": "^4.1.5",
-    "pg-promise": "^10.3.1",
-    "random-int": "^2.0.1",
-    "slugify": "^1.3.6",
+    "pg-promise": "^10.4.2",
     "toml-require": "^1.2.0"
   },
   "devDependencies": {
-    "eslint": "^6.7.2",
+    "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "nodemon": "^2.0.1",
+    "node-dev": "^4.0.0",
     "supertest": "^4.0.2",
-    "tap-spec": "^5.0.0",
-    "tape": "^4.11.0"
+    "tap-difflet": "^0.7.2",
+    "tape": "^4.13.0"
   },
   "engines": {
     "node": "12",
     "yarn": "1"
   },
   "scripts": {
-    "ci": "run-s -s lint:check db:recreate db:seed test",
-    "db:recreate": "run-s -s \"migrate recreate\"",
-    "db:seed": "run-s -s \"migrate seed\"",
-    "dev": "run-p -s dev:server",
-    "dev:server": "nodemon -q -I -e js,json -i package.json -- -r @babel/register index.js",
-    "lint:check": "eslint .",
-    "lint:fix": "eslint --fix .",
-    "migrate": "node -r @babel/register -r ./env migrate",
-    "start": "node -r @babel/register index.js",
-    "test": "tape -r @babel/register -r ./env **/*.test.js | tap-spec"
+    "ci": "run-p lint test",
+    "db:recreate": "run-s \"migrate recreate\"",
+    "db:seed": "run-s \"migrate seed\"",
+    "dev": "NODE_PATH=. node-dev --no-notify index.js",
+    "lint": "eslint .",
+    "migrate": "NODE_PATH=. node -r ./env migrate.js",
+    "start": "NODE_PATH=. node index.js",
+    "test": "NODE_ENV=test run-s db:recreate db:seed test:run",
+    "test:run": "NODE_PATH=. tape -r ./env **/*.test.js | tap-difflet"
   }
 }
