--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "koa-mount": "^4.0.0",
     "koa-response-time": "^2.1.0",
     "koa-router": "^8.0.8",
+    "koa-send": "^5.0.0",
     "lodash": "^4.17.15",
     "migratio": "^2.0.3",
     "mri": "^1.1.5",
@@ -33,6 +34,8 @@
     "nodemailer": "^6.4.6",
     "npm-run-all": "^4.1.5",
     "pg-promise": "^10.5.2",
+    "redoc-cli": "^0.9.8",
+    "swagger-ui-dist": "^3.25.3",
     "toml-require": "^1.2.0"
   },
   "devDependencies": {
@@ -42,6 +45,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
+    "joi-to-swagger": "^4.0.0",
     "node-dev": "^4.0.0",
     "supertest": "^4.0.2",
     "tap-difflet": "^0.7.2",
@@ -53,6 +57,9 @@
   },
   "scripts": {
     "ci": "run-p lint test",
+    "docs:build": "NODE_PATH=. node -r ./env.js ./docs/api/index.js",
+    "docs:serve": "redoc-cli bundle docs/api/docs.json",
+    "docs:serve:watch": "redoc-cli serve docs/api/docs.json --watch",
     "db:recreate": "run-s \"migrate recreate\"",
     "db:seed": "run-s \"migrate seed\"",
     "dev": "NODE_PATH=. node-dev --no-notify index.js",
