--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "joi-to-swagger": "^4.0.0",
+    "js-yaml": "^3.14.0",
     "node-dev": "^4.0.0",
     "supertest": "^4.0.2",
     "tap-difflet": "^0.7.2",
