--- a/package.json
+++ b/package.json
@@ -58,6 +58,6 @@
     "migrate": "NODE_PATH=. node -r ./env migrate.js",
     "start": "NODE_PATH=. node index.js",
     "test": "NODE_ENV=test run-s db:recreate db:seed test:run",
-    "test:run": "NODE_PATH=. tape -r ./env **/*.test.js | tap-difflet"
+    "test:run": "NODE_PATH=. tape -r ./env '{!(node_modules)/**/*.test.js,./*.test.js}' | tap-difflet"
   }
 }
