--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
   "scripts": {
     "ci": "run-p lint test",
     "db:recreate": "run-s db:drop \"db up\"",
-    "db:migrate": "runs-s \"db up\"",
+    "db:migrate": "run-s \"db up\"",
     "db:drop": "run-s \"db drop\"",
     "db:seed": "run-s \"db seed\"",
     "dev": "NODE_PATH=. node-dev --no-notify index.js",
