--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "@iarna/toml": "^2.2.5",
     "bcryptjs": "^2.4.3",
     "connection-string": "^3.2.0",
     "crypto-random-string": "^3.2.0",
@@ -30,8 +31,7 @@
     "nested-error-stacks": "^2.1.0",
     "nodemailer": "^6.4.6",
     "npm-run-all": "^4.1.5",
-    "pg-promise": "^10.5.2",
-    "toml-require": "^1.2.0"
+    "pg-promise": "^10.5.2"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
@@ -41,6 +41,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "node-dev": "^4.0.0",
+    "nyc": "^15.1.0",
     "supertest": "^4.0.2",
     "tap-difflet": "^0.7.2",
     "tape": "^5.0.0"
@@ -50,7 +51,7 @@
     "yarn": "1"
   },
   "scripts": {
-    "ci": "run-p lint test",
+    "ci": "run-s lint coverage",
     "db:recreate": "run-s db:drop \"db up\"",
     "db:migrate": "run-s \"db up\"",
     "db:drop": "run-s \"db drop\"",
@@ -60,6 +61,7 @@
     "db": "NODE_PATH=. node -r ./env db/cli.js",
     "start": "NODE_PATH=. node index.js",
     "test": "NODE_ENV=test run-s db:recreate db:seed test:run",
-    "test:run": "NODE_PATH=. tape -r ./env '{!(node_modules)/**/*.test.js,./*.test.js}' | tap-difflet"
+    "test:run": "NODE_PATH=. tape -r ./env '{!(node_modules)/**/*.test.js,./*.test.js}' | tap-difflet",
+    "coverage": "nyc --reporter=lcov --reporter=text npm run test"
   }
 }
