--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
     "npm-run-all": "^4.1.5",
     "pg-promise": "^10.5.2",
     "redoc-cli": "^0.9.8",
-    "swagger-ui-dist": "^3.25.3",
-    "toml-require": "^1.2.0"
+    "swagger-ui-dist": "^3.25.3"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
