--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "npm-run-all": "^4.1.5",
     "pg": "^8.6.0",
     "postgres-migrations": "^5.1.1",
+    "queue": "gist:b22ca12fcee4e1d4c3c0f85d43080f92",
     "redoc-cli": "^0.9.8",
     "swagger-ui-dist": "^3.25.3"
   },
