--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "koa-router": "^8.0.8",
     "koa-send": "^5.0.0",
     "lodash": "^4.17.21",
+    "memo-args": "gist:e941ee28eb4e4072ebbe9d696fdfb7af",
     "migratio": "^2.0.3",
     "mri": "^1.1.5",
     "nested-error-stacks": "^2.1.0",
     "nodemailer": "^6.4.16",
     "npm-run-all": "^4.1.5",
     "pg-promise": "^10.5.2",
+    "queue": "gist:b22ca12fcee4e1d4c3c0f85d43080f92",
     "redoc-cli": "^0.9.8",
     "swagger-ui-dist": "^3.25.3"
   },
