--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "connection-string": "^3.2.0",
     "crypto-random-string": "^3.2.0",
     "dotenv-safe": "^8.2.0",
+    "hrid": "^0.1.0",
     "joi": "^17.2.1",
     "joi-to-swagger": "^5.0.1",
     "js-yaml": "^3.14.0",
@@ -29,13 +30,12 @@
     "koa-router": "^8.0.8",
     "koa-send": "^5.0.0",
     "lodash": "^4.17.21",
-    "pg": "^8.6.0",
-    "postgres-migrations": "^5.1.1",
     "memo-args": "gist:e941ee28eb4e4072ebbe9d696fdfb7af",
     "nested-error-stacks": "^2.1.0",
     "nodemailer": "^6.4.16",
     "npm-run-all": "^4.1.5",
-    "queue": "gist:b22ca12fcee4e1d4c3c0f85d43080f92",
+    "pg": "^8.6.0",
+    "postgres-migrations": "^5.1.1",
     "redoc-cli": "^0.9.8",
     "swagger-ui-dist": "^3.25.3"
   },
